--- a/PlayStream/InicioAdmin.xaml
+++ b/PlayStream/InicioAdmin.xaml
@@ -24,7 +24,7 @@
 
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="671,382,0,0"
             VerticalAlignment="Top" Width="97" Height="38" Background="Red" Foreground="#FF000033" FontWeight="Bold" Click="btnSalir_Click"/>
-        
+
         <DataGrid x:Name="peliculaDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,79,277.8,65" 
                   RowDetailsVisibilityMode="VisibleWhenSelected" FontSize="14" FontFamily="Verdana" IsReadOnly="True" SelectionChanged="peliculaDataGrid_SelectionChanged">
             <DataGrid.Columns>
@@ -68,7 +68,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Grid x:Name="gridCajaDetalle" Margin="10,-449,-2,509"
+        <Grid x:Name="gridCajaDetalle" Margin="10,-473,-2,533"
             Background="White">
             <Label x:Name="lblTituloDetalle" Content="Detalles de la pelicula"
                 HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"
@@ -111,7 +111,7 @@
 
         </Grid>
 
-        <Grid x:Name="gridCajaNuevo" Margin="10,-449,-2,509"
+        <Grid x:Name="gridCajaNuevo" Margin="-913,-244,921,304"
             Background="White">
             <Label x:Name="lblTituloNuevo" Content="Añadir un nuevo producto"
                    HorizontalAlignment="Left" Margin="10,10,0,0"
@@ -130,8 +130,8 @@
                         Click="btnAddNuevo_Click"/>
             <Grid x:Name="grid2" HorizontalAlignment="Left" Margin="82,76,0,0" VerticalAlignment="Top" Width="501">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto" MinWidth="147.2"/>
+                    <ColumnDefinition Width="Auto" MinWidth="353.6"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -142,22 +142,22 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Content="Titulo:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="0" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="tituloTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="0" VerticalAlignment="Center" Width="350"/>
-                <Label Content="Descripcion:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="1" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="descripcionTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="1"  VerticalAlignment="Center" Width="350"/>
-                <Label Content="Director:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="2" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="directorTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="2" VerticalAlignment="Center" Width="350"/>
-                <Label Content="Genero:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="3" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="generoTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="3"  VerticalAlignment="Center" Width="350"/>
-                <Label Content="Trailer:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="4" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="trailerTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="4" VerticalAlignment="Center" Width="350"/>
-                <Label Content="Enlace Pelicula:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="5" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" />
-                <TextBox x:Name="enlacePeliculaTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="5"  VerticalAlignment="Center" Width="350"/>
+                <Label Content="Titulo:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3,0,3.6" Grid.Row="0" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="27" />
+                <TextBox x:Name="tituloTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3.8,5,-0.2,5.6" Grid.Row="0" VerticalAlignment="Center" Width="350"/>
+                <Label Content="Descripcion:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3.4,0,3.2" Grid.Row="1" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="27" />
+                <TextBox x:Name="descripcionTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3.8,5.4,-0.2,5.2" Grid.Row="1"  VerticalAlignment="Center" Width="350"/>
+                <Label Content="Director:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,2.8,0,2.8" Grid.Row="2" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="28" />
+                <TextBox x:Name="directorTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="3.8,4.8,-0.2,4.8" Grid.Row="2" VerticalAlignment="Center" Width="350"/>
+                <Label Content="Genero:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3.2,0,3.4" Grid.Row="3" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="27" />
+                <TextBox x:Name="generoTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3.8,5.2,-0.2,5.4" Grid.Row="3"  VerticalAlignment="Center" Width="350"/>
+                <Label Content="Trailer:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3.6,0,3" Grid.Row="4" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="27" />
+                <TextBox x:Name="trailerTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3.8,5.6,-0.2,5" Grid.Row="4" VerticalAlignment="Center" Width="350"/>
+                <Label Content="Enlace Pelicula:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3,0,3.6" Grid.Row="5" VerticalAlignment="Center" Width="120" FontWeight="Bold" FontSize="14" FontFamily="Verdana" Height="27" />
+                <TextBox x:Name="enlacePeliculaTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3.8,5,-0.2,5.6" Grid.Row="5"  VerticalAlignment="Center" Width="350"/>
             </Grid>
         </Grid>
 
-        <Grid x:Name="gridCajaEditar" Margin="10,496,-2,-436"
+        <Grid x:Name="gridCajaEditar" Margin="-6,506,14,-446"
                 Background="White">
             <Label x:Name="lblTituloEditar" Content="Modificación de un producto" 
                    HorizontalAlignment="Left" Margin="10,10,0,0"
