--- a/PlayStream/InicioAdmin.xaml
+++ b/PlayStream/InicioAdmin.xaml
@@ -22,10 +22,14 @@
             </StackPanel>
         </Button>
 
-        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="671,382,0,0"
+        <Button x:Name="JSONpeliculas" Content="Almacen JSON Peliculas" HorizontalAlignment="Left" Margin="515,10,0,0"
+                VerticalAlignment="Top" Width="145" Height="40" Click="JSONpeliculas_Click"/>
+
+
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="687,384,0,0"
             VerticalAlignment="Top" Width="97" Height="38" Background="Red" Foreground="#FF000033" FontWeight="Bold" Click="btnSalir_Click"/>
 
-        <DataGrid x:Name="peliculaDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,79,277.8,65" 
+        <DataGrid x:Name="peliculaDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,79,117,65" 
                   RowDetailsVisibilityMode="VisibleWhenSelected" FontSize="14" FontFamily="Verdana" IsReadOnly="True" SelectionChanged="peliculaDataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding id}" Header="Id" Width="Auto"/>
@@ -204,6 +208,33 @@
             </Grid>
 
         </Grid>
+
+        <Grid  x:Name="GridJSON"  Margin="-878,264,878,-264" Background="White">
+<!--
+
+            <DataGrid x:Name="peliculaDataGridJSON" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,79,117,65" 
+                  RowDetailsVisibilityMode="VisibleWhenSelected" FontSize="14" FontFamily="Verdana" IsReadOnly="True" SelectionChanged="peliculaDataGridJSON_SelectionChanged">
+                <DataGrid.Columns>
+                    <DataGridTextColumn x:Name="idColumnJSON" Binding="{Binding id}" Header="Id" Width="Auto"/>
+                    <DataGridTextColumn x:Name="tituloColumnJSON" Binding="{Binding titulo}" Header="Titulo" Width="Auto"/>
+                    <DataGridTextColumn x:Name="generoColumnJSON" Binding="{Binding Genero}" Header="Genero" Width="Auto"/>
+                    <DataGridTextColumn x:Name="directorColumnJSON" Binding="{Binding director}" Header="Director" Width="Auto"/>
+                    
+                </DataGrid.Columns>
+            </DataGrid>-->
+            <Label x:Name="lblTitulo" Content="Listado simple"
+            HorizontalAlignment="Left" Margin="21,10,0,0"
+            VerticalAlignment="Top" FontSize="24"/>
+
+
+
+            <Canvas x:Name="pnlDatos" HorizontalAlignment="Left"
+            Height="315" Margin="5,52,0,0" VerticalAlignment="Top"
+            Width="779"/>
+        </Grid>
+        <Button x:Name="VaciarBD" Content="Borrar todo" Background="Black" Foreground="White" HorizontalAlignment="Left" 
+                Margin="699,104,0,0" VerticalAlignment="Top" Width="89" Height="40" Click="VaciarBD_Click"/>
+        <Button x:Name="poblarBD" Content="PoblarBD"  Background="Green" Foreground="Black" HorizontalAlignment="Left" Margin="699,183,0,0" VerticalAlignment="Top" Width="85" Height="38" Click="poblarBD_Click"/>
 
     </Grid>
 </Window>
