--- a/PlayStream/App.xaml
+++ b/PlayStream/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PlayStream"
-             StartupUri="Principal.xaml">
+             StartupUri="InicioAdmin.xaml">
     <Application.Resources>
          
     </Application.Resources>
